[package]
name = "rdbc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.1"
mysql_common = "0.29.2"
postgres = "0.19.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.15", features = ["derive", "rc"] }
serde_json = "1.0.94"
sqlparser = "0.32.0"
tokio = { version = "1.25.0", features = ["macros", "rt", "fs"] }

